<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@android:color/holo_red_dark"
    tools:context="com.example.meoryou.calculator.calculator">


    <Button
        android:id="@+id/num_0"
        android:layout_width="110dp"
        android:layout_height="240dp"
        android:layout_above="@+id/basic_answer"
        android:layout_alignEnd="@+id/basic_answer"
        android:layout_alignRight="@+id/basic_answer"
        android:onClick="button0OnClick"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_0" />

    <Button
        android:id="@+id/basic_answer"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="buttonAnswerOnClick"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/string_answer" />

    <Button
        android:id="@+id/num_8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_8"
        android:onClick="button8OnClick"
        android:layout_above="@+id/num_5"
        android:layout_toLeftOf="@+id/num_7"
        android:layout_toStartOf="@+id/num_7" />

    <Button
        android:id="@+id/num_7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_7"
        android:onClick="button7OnClick"
        android:layout_above="@+id/num_4"
        android:layout_toRightOf="@+id/num_8"
        android:layout_toEndOf="@+id/num_5" />

    <Button
        android:id="@+id/num_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_6"
        android:onClick="button6OnClick"
        android:layout_above="@+id/num_3"
        android:layout_alignLeft="@+id/num_3"
        android:layout_alignStart="@+id/num_3" />

    <Button
        android:id="@+id/num_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_5"
        android:onClick="button5OnClick"
        android:layout_above="@+id/num_2"
        android:layout_alignLeft="@+id/num_2"
        android:layout_alignStart="@+id/num_2" />

    <TextView
        android:id="@+id/display_operation"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_above="@+id/back_space"
        android:layout_alignLeft="@+id/basic_answer"
        android:layout_alignStart="@+id/basic_answer"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="end"
        android:padding="@dimen/padding_all_buttons"
        android:textAlignment="viewEnd"
        android:textSize="64sp" />

    <Button
        android:id="@+id/back_space"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:onClick="buttonBackSpaceOnClick"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/back_space"
        android:layout_above="@+id/basic_division"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/clear_view"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:padding="@dimen/padding_all_buttons"
        android:onClick="buttonClearViewOnClick"
        android:text="@string/clear_view"
        android:layout_above="@+id/basic_subtract"
        android:layout_alignLeft="@+id/basic_add"
        android:layout_alignStart="@+id/basic_add" />

    <Button
        android:id="@+id/plus_or_minus"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:padding="@dimen/padding_all_buttons"
        android:layout_above="@+id/basic_multiply"
        android:layout_toRightOf="@+id/decimal_place"
        android:layout_toEndOf="@+id/decimal_place"
        android:onClick="buttonPlusOrMinusOnClick"
        android:text="@string/plus_or_minus" />

    <Button
        android:id="@+id/decimal_place"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:padding="@dimen/padding_all_buttons"
        android:layout_above="@+id/basic_subtract"
        android:layout_toEndOf="@+id/clear_view"
        android:layout_toRightOf="@+id/clear_view"
        android:onClick="buttonDecimalPlaceOnClick"
        android:text="@string/decimal_place" />

    <Button
        android:id="@+id/num_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_4"
        android:onClick="button4OnClick"
        android:layout_below="@+id/num_8"
        android:layout_toRightOf="@+id/num_8"
        android:layout_toEndOf="@+id/num_8" />

    <Button
        android:id="@+id/num_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_3"
        android:onClick="button3OnClick"
        android:layout_above="@+id/basic_answer"
        android:layout_alignLeft="@+id/basic_answer"
        android:layout_alignStart="@+id/basic_answer" />

    <Button
        android:id="@+id/num_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_2"
        android:onClick="button2OnClick"
        android:layout_above="@+id/basic_answer"
        android:layout_toRightOf="@+id/num_6"
        android:layout_toEndOf="@+id/num_6" />

    <Button
        android:id="@+id/num_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_1"
        android:onClick="button1OnClick"
        android:layout_below="@+id/num_4"
        android:layout_toRightOf="@+id/num_5"
        android:layout_toEndOf="@+id/num_5" />

    <Button
        android:id="@+id/basic_multiply"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/basic_math_multiply"
        android:onClick="buttonMultiplyOnClick"
        android:layout_alignTop="@+id/basic_division"
        android:layout_toRightOf="@+id/basic_subtract"
        android:layout_toEndOf="@+id/basic_subtract" />

    <Button
        android:id="@+id/basic_subtract"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/basic_math_subtract"
        android:onClick="buttonSubtractOnClick"
        android:layout_alignBottom="@+id/basic_add"
        android:layout_toRightOf="@+id/basic_add"
        android:layout_above="@+id/num_8"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/basic_division"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:onClick="buttonDivisionOnClick"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/basic_math_divide"
        android:layout_above="@+id/num_0"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/basic_add"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/basic_math_add"
        android:onClick="buttonAddOnClick"
        android:layout_above="@+id/num_9"
        android:layout_toLeftOf="@+id/num_8"
        android:layout_toStartOf="@+id/num_8" />

    <Button
        android:id="@+id/num_9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/padding_all_buttons"
        android:text="@string/num_9"
        android:onClick="button9OnClick"
        android:layout_above="@+id/num_6"
        android:layout_alignLeft="@+id/num_6"
        android:layout_alignStart="@+id/num_6" />

</RelativeLayout>

